--- a/assets/css/materialize.css
+++ b/assets/css/materialize.css
@@ -2562,15 +2562,23 @@ p {
 }
 
 .left-align {
-  float: left;
+  text-align: left;
 }
 
 .right-align {
-  float: right;
+  text-align: right;
 }
 
 .center {
   text-align: center;
+}
+
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
 }
 
 .center-block {
@@ -2629,9 +2637,22 @@ blockquote {
   border-left: 5px solid #EF9A9A;
 }
 
+i {
+  line-height: inherit;
+}
+i.left {
+  float: left;
+  margin-right: 15px;
+}
+i.right {
+  float: right;
+  margin-left: 15px;
+}
+
 .parallax-container {
   position: relative;
   overflow: hidden;
+  height: 500px;
 }
 
 .parallax {
@@ -2662,10 +2683,6 @@ blockquote {
     position: relative;
   }
 }
-.text-center {
-  text-align: center;
-}
-
 @media only screen and (max-width: 600px) {
   .hide-on-small-only, .hide-on-small-and-down {
     display: none !important;
@@ -6170,7 +6187,7 @@ nav ul li {
   transition: background-color 0.3s;
 }
 nav ul li:hover, nav ul li.active {
-  background-color: #ea454b;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 nav ul a {
   font-size: 1rem;
@@ -6806,14 +6823,7 @@ ul.tabs li.tab {
 
 .btn i, .btn-large i, .btn-floating i, .btn-large i, .btn-flat i {
   font-size: 1.3rem;
-  float: left;
   line-height: inherit;
-  margin-right: 15px;
-}
-.btn i.right, .btn-large i.right, .btn-floating i.right, .btn-large i.right, .btn-flat i.right {
-  float: right;
-  margin-right: 0;
-  margin-left: 15px;
 }
 
 .btn, .btn-large {
@@ -6876,8 +6886,12 @@ ul.tabs li.tab {
   height: 54px;
   line-height: 56px;
 }
+.btn-large i {
+  font-size: 1.6rem;
+}
 
 .dropdown-content {
+  display: none;
   position: absolute;
   background-color: #FFFFFF;
   margin: 0px;
@@ -6898,11 +6912,11 @@ ul.tabs li.tab {
 
 /*!
  * Waves v0.5.3
- * http://fian.my.id/Waves
- *
- * Copyright 2014 Alfiana E. Sibuea and other contributors
- * Released under the MIT license
- * https://github.com/fians/Waves/blob/master/LICENSE
+ * http://fian.my.id/Waves 
+ * 
+ * Copyright 2014 Alfiana E. Sibuea and other contributors 
+ * Released under the MIT license 
+ * https://github.com/fians/Waves/blob/master/LICENSE 
  */
 .waves-effect {
   position: relative;
@@ -7232,7 +7246,7 @@ textarea {
 }
 
 /***************
-  Radio Buttons
+  Radio Buttons 
 ***************/
 /* Remove default checkbox */
 [type="radio"]:not(:checked),
@@ -7327,7 +7341,7 @@ textarea {
 }
 
 /***************
-   Checkboxes
+   Checkboxes 
 ***************/
 /* CUSTOM CSS CHECKBOXES */
 form p {
@@ -7436,7 +7450,7 @@ form p:last-child {
 }
 
 /***************
-  Select Field
+  Select Field 
 ***************/
 .select-wrapper span.select-dropdown {
   position: relative;
@@ -7470,7 +7484,7 @@ select.disabled {
 }
 
 /***************
-      Range
+      Range 
 ***************/
 .range-field {
   position: relative;
