--- a/assets/css/maera-materialize.css
+++ b/assets/css/maera-materialize.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
 /**
  * 1. Set default font family to sans-serif.
@@ -2007,10 +2006,10 @@ ul {
 li {
   list-style-type: none; }
 
-.z-depth-1, nav, .card-panel, .card, .toast, .btn, .btn-large, .btn-floating, .dropdown-content, .modal, ul.collapsible {
+.z-depth-1, nav, .card-panel, .card, .toast, .btn, .btn-large, .btn-floating, .dropdown-content, ul.collapsible {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12); }
 
-.z-depth-1-half, .btn:hover, .btn-large:hover, .btn-floating:hover {
+.z-depth-1-half, .btn:hover, .btn-large:hover, .btn-floating:hover, .modal {
   box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15); }
 
 .z-depth-2 {
@@ -4662,6 +4661,7 @@ nav {
     padding: 0; }
     @media only screen and (max-width: 992px) {
       nav .brand-logo {
+        left: 0;
         width: 100%;
         text-align: center;
         z-index: 0; } }
@@ -5294,6 +5294,7 @@ ul.tabs li.tab {
 
 .modal {
   display: none;
+  position: fixed;
   background-color: #eee;
   padding: 24px;
   max-height: 70%;
@@ -5302,10 +5303,13 @@ ul.tabs li.tab {
   right: 0;
   margin: auto;
   overflow-y: auto;
-  border-radius: 2px;
+  z-index: 1000;
+  border-radius: "2px";
+  background-clip: padding-box;
   -webkit-transform: translate(0);
   -ms-transform: translate(0);
-  transform: translate(0); }
+  transform: translate(0);
+  will-change: top, opacity; }
   @media only screen and (max-width: 992px) {
     .modal {
       max-width: 80%; } }
@@ -5317,10 +5321,13 @@ ul.tabs li.tab {
   z-index: 999;
   top: 0px;
   left: 0px;
-  height: 120%;
-  width: 120%;
+  bottom: 0;
+  right: 0;
+  height: 115%;
+  width: 100%;
   background: #000;
-  display: none; }
+  display: none;
+  will-change: opacity; }
 
 .modal-action {
   margin-top: 10px;
@@ -5834,7 +5841,8 @@ ul.table-of-contents a {
     height: 120%;
     background-color: #FFF;
     z-index: 1000;
-    box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15); }
+    box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
+    will-change: left; }
     ul.side-nav li {
       float: none;
       padding: 0 15px; }
@@ -5853,13 +5861,14 @@ ul.table-of-contents a {
   #front-page-nav ul.side-nav a {
     color: #444; } }
 #sidenav-overlay {
-  position: fixed;
+  position: absolute;
   top: 0px;
   left: 0px;
   right: 0px;
   bottom: 0px;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 999; }
+  z-index: 999;
+  will-change: opacity; }
 
 /*
     @license
@@ -6229,7 +6238,7 @@ ul.table-of-contents a {
    $BASE-PICKER
    ========================================================================== */
 /**
- * Note: the root picker element should *NOT* be styled more than what’s here.
+ * Note: the root picker element should *NOT* be styled more than what's here.
  */
 .picker {
   font-size: 16px;
@@ -6250,13 +6259,13 @@ ul.table-of-contents a {
   cursor: default; }
 
 /**
- * When the picker is opened, the input element is “activated”.
+ * When the picker is opened, the input element is "activated".
  */
 .picker__input.picker__input--active {
   border-color: #0089ec; }
 
 /**
- * The holder is the only “scrollable” top-level container element.
+ * The holder is the only "scrollable" top-level container element.
  */
 .picker__holder {
   width: 100%;
@@ -6268,7 +6277,7 @@ ul.table-of-contents a {
  * Demo: http://amsul.github.io/pickadate.js
  */
 /**
- * Note: the root picker element should *NOT* be styled more than what’s here.
+ * Note: the root picker element should *NOT* be styled more than what's here.
  */
 /**
  * Make the holder and frame fullscreen.
