--- a/assets/css/maera-materialize.css
+++ b/assets/css/maera-materialize.css
@@ -2006,10 +2006,18 @@ ul {
 li {
   list-style-type: none; }
 
-.z-depth-1, nav, .card-panel, .card, .toast, .btn, .btn-large, .btn-floating, .dropdown-content, ul.collapsible {
+.z-depth-1, nav, .card-panel, .card, .toast, .btn, .btn-large,
+button,
+input[type="button"],
+input[type="reset"],
+input[type="submit"], .btn-floating, .dropdown-content, ul.collapsible {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12); }
 
-.z-depth-1-half, .btn:hover, .btn-large:hover, .btn-floating:hover, .modal {
+.z-depth-1-half, .btn:hover, .btn-large:hover,
+button:hover,
+input[type="button"]:hover,
+input[type="reset"]:hover,
+input[type="submit"]:hover, .btn-floating:hover, .modal {
   box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15); }
 
 .z-depth-2 {
@@ -5104,7 +5112,12 @@ ul.tabs li.tab {
   -ms-transform-origin: 50% 10%;
   transform-origin: 50% 10%; }
 
-.btn, .btn-large, .btn-flat {
+.btn, .btn-large,
+.btn-flat,
+button,
+input[type="button"],
+input[type="reset"],
+input[type="submit"] {
   display: inline-block;
   height: 36px;
   margin-bottom: 15px;
@@ -5115,11 +5128,39 @@ ul.tabs li.tab {
   text-transform: uppercase;
   border: none; }
 
-.btn.disabled, .disabled.btn-large, .btn-floating.disabled, .btn-large.disabled, .btn:disabled, .btn-large:disabled, .btn-large:disabled, .btn-floating:disabled {
+.btn.disabled, .disabled.btn-large,
+.btn-floating.disabled,
+.btn-large.disabled,
+.btn:disabled,
+.btn-large:disabled,
+.btn-large:disabled,
+.btn-floating:disabled,
+button.disabled,
+input[type="button"].disabled,
+input[type="reset"].disabled,
+input[type="submit"].disabled,
+button:disabled,
+input[type="button"]:disabled,
+input[type="reset"]:disabled,
+input[type="submit"]:disabled {
   background-color: #DFDFDF;
   box-shadow: none;
   color: #9F9F9F; }
-  .btn.disabled:hover, .disabled.btn-large:hover, .btn-floating.disabled:hover, .btn-large.disabled:hover, .btn:disabled:hover, .btn-large:disabled:hover, .btn-large:disabled:hover, .btn-floating:disabled:hover {
+  .btn.disabled:hover, .disabled.btn-large:hover,
+  .btn-floating.disabled:hover,
+  .btn-large.disabled:hover,
+  .btn:disabled:hover,
+  .btn-large:disabled:hover,
+  .btn-large:disabled:hover,
+  .btn-floating:disabled:hover,
+  button.disabled:hover,
+  input[type="button"].disabled:hover,
+  input[type="reset"].disabled:hover,
+  input[type="submit"].disabled:hover,
+  button:disabled:hover,
+  input[type="button"]:disabled:hover,
+  input[type="reset"]:disabled:hover,
+  input[type="submit"]:disabled:hover {
     background-color: #DFDFDF;
     color: #9F9F9F; }
 
@@ -5127,7 +5168,11 @@ ul.tabs li.tab {
   font-size: 1.3rem;
   line-height: inherit; }
 
-.btn, .btn-large {
+.btn, .btn-large,
+button,
+input[type="button"],
+input[type="reset"],
+input[type="submit"] {
   text-decoration: none;
   color: #FFFFFF;
   background-color: #2196F3;
@@ -5136,7 +5181,11 @@ ul.tabs li.tab {
   -webkit-transition: 0.2s ease-out;
   transition: 0.2s ease-out;
   cursor: pointer; }
-  .btn:hover, .btn-large:hover {
+  .btn:hover, .btn-large:hover,
+  button:hover,
+  input[type="button"]:hover,
+  input[type="reset"]:hover,
+  input[type="submit"]:hover {
     background-color: #39a1f4; }
 
 .btn-floating {
