--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -84,3 +84,8 @@ ul.table-of-contents {
     margin-bottom: 20px;
   }
 }
+
+.header.hero {
+    background-size: cover;
+    background-repeat: no-repeat;
+}
