re-adding parallax. Please note that This implementation requires the installation of this plugin: https://wordpress.org/plugins/jquery-updater/

--- a/assets/css/maera-materialize.css
+++ b/assets/css/maera-materialize.css
@@ -6962,4 +6962,6 @@ ul.table-of-contents {
     margin-bottom: 20px; } }
 .header.hero {
   background-size: cover;
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+  height: 50vh;
+  min-height: 500px; }
