--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -88,4 +88,6 @@ ul.table-of-contents {
 .header.hero {
     background-size: cover;
     background-repeat: no-repeat;
+    height: 50vh;
+    min-height: 500px;
 }
