--- a/views/header.twig
+++ b/views/header.twig
@@ -8,38 +8,44 @@
 {% set widget_width_medium = logo_width_medium == 12 ? 12 : 12 - logo_width_medium %}
 {% set widget_width_large  = logo_width_large  == 12 ? 12 : 12 - logo_width_large %}
 
-{% if not theme_mods.navbar_disable %}
-	{% set navwrapper = 'nav-wrapper' %}
-	<nav>
-		{% block header %}
-			<div class="{{ navwrapper|apply_filters('maera/nav/class') }}">
-				{{ container_open( 'div' ) }}
-					<a href="#" class="brand-logo">{{ bloginfo( 'name' ) }}</a>
-					<ul id="nav-mobile" class="right side-nav">
-						{% for item in menu.primary.items %}
-							<li id="menu-item-{{item.ID}}" class="menu-item menu-item-type-{{item.type}} menu-item-object-{{item.object}} menu-item-{{item.ID}}{% if 'current-menu-item' in item.classes %} active{% endif %}">
-								<a href="{{item.link}}">{{ item.title }}</a>
-							</li>
-						{% endfor %}
-					</ul>
-				{{ container_close( 'div' ) }}
-			</div>
-		{% endblock %}
-	</nav>
-{% endif %}
+{% include 'head.twig' %}
+<body class="{{ body_class }}">
+	<a href="#content" class="sr-only skip-link screen-reader-text">{{ __( 'Skip to main content', 'maera' ) }}</a>
+	{% do action( 'get_header' ) %}
+	{% do action( 'maera/header/before', post.ID ) %}
+	{% if not theme_mods.navbar_disable %}
+		{% set navwrapper = 'nav-wrapper' %}
+		<nav>
+			{% block header %}
+				<div class="{{ navwrapper|apply_filters('maera/nav/class') }}">
+					{{ container_open( 'div' ) }}
+						<a href="#" class="brand-logo">{{ bloginfo( 'name' ) }}</a>
+						<ul id="nav-mobile" class="right side-nav">
+							{% for item in menu.primary.items %}
+								<li id="menu-item-{{item.ID}}" class="menu-item menu-item-type-{{item.type}} menu-item-object-{{item.object}} menu-item-{{item.ID}}{% if 'current-menu-item' in item.classes %} active{% endif %}">
+									<a href="{{item.link}}">{{ item.title }}</a>
+								</li>
+							{% endfor %}
+						</ul>
+					{{ container_close( 'div' ) }}
+				</div>
+			{% endblock %}
+		</nav>
+	{% endif %}
 
-<div class="header hero parallax-container">
-	<div class="parallax"><img src="{{ header_img }}"></div>
-	{{ container_open( 'div' ) }}
-		<div class="row">
-			<div class="{{ column_classes( [{'tablet':logo_width_tablet},{'medium':logo_width_medium},{'large':logo_width_large}] ) }} header-property-wrap">
-				<h2>{% include 'site-logo.twig' %}</h2>
+	<div class="header hero parallax-container">
+		<div class="parallax"><img src="{{ header_img }}"></div>
+		{{ container_open( 'div' ) }}
+			<div class="row">
+				<div class="{{ column_classes( [{'tablet':logo_width_tablet},{'medium':logo_width_medium},{'large':logo_width_large}] ) }} header-property-wrap">
+					<h2>{% include 'site-logo.twig' %}</h2>
+				</div>
+				{% if sidebar.header %}
+				<div class="{{ column_classes( [{'tablet':widget_width_tablet},{'medium':widget_width_medium},{'large':widget_width_large}] ) }}">
+					{{ sidebar.header }}
+				</div>
+				{% endif %}
 			</div>
-			{% if sidebar.header %}
-			<div class="{{ column_classes( [{'tablet':widget_width_tablet},{'medium':widget_width_medium},{'large':widget_width_large}] ) }}">
-				{{ sidebar.header }}
-			</div>
-			{% endif %}
-		</div>
-	{{ container_close( 'div' ) }}
-</div>
+		{{ container_close( 'div' ) }}
+	</div>
+	{% do action( 'maera/header/after', post.ID ) %}
