--- a/assets/sass/components/_dropdown.scss
+++ b/assets/sass/components/_dropdown.scss
@@ -1,3 +1,8 @@
+li.divider {
+  height: 1px;
+  overflow: hidden;
+  background-color: color("grey", "lighten-3");
+}
 .dropdown-content {
   display:none;
   @extend .z-depth-1;
@@ -11,7 +16,11 @@
     cursor: pointer;
     font-size: 1.2rem;
     color: $off-black;
-    padding: 1rem 1rem;
+
+    a, span {
+      display: block;
+      padding: 1rem 1rem;
+    }
   }
     
   @media only screen and (min-width: $large-screen) {
