--- a/assets/sass/components/_modal.scss
+++ b/assets/sass/components/_modal.scss
@@ -25,11 +25,11 @@
     margin-top: 0;
   }
 }
-#lean_overlay {
+#lean-overlay {
     position: fixed;
     z-index:999;
-    top: 0px;
-    left: 0px;
+    top: 0;
+    left: 0;
     bottom: 0;
     right: 0;
     height: 115%;
