--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,6 +1,10 @@
 /***************
   HTML Styles
 ***************/
+html {
+    overflow-x: hidden;
+}
+
 body {
   background-color: #fcfcfc;
 }
@@ -51,6 +55,10 @@ nav {
     left: 0;
     right: 0;
     margin-top: -27px;
+  }
+
+  &.featured-image {
+      height: 60vh;
   }
 
 }
