--- a/views/base.twig
+++ b/views/base.twig
@@ -1,8 +1,11 @@
-{% do action( 'maera/wrap/before', post.ID ) %}
-{% do action( 'maera/content/before', post.ID ) %}
-<div class="content" id="content" itemprop="mainContentOfPage">
-	{% do action( 'maera/main/before', post.ID ) %}
-	{% block main %}{{ __( 'Sorry, no content', 'maera' ) }}{% endblock %}
-	{% do action( 'maera/main/after', post.ID ) %}
-</div>
-{% do action( 'maera/content/after' ) %}
+<main>
+	{% do action( 'maera/wrap/before', post.ID ) %}
+	{% do action( 'maera/content/before', post.ID ) %}
+	<div class="content" id="content" itemprop="mainContentOfPage">
+		{% do action( 'maera/main/before', post.ID ) %}
+		{% block main %}{{ __( 'Sorry, no content', 'maera' ) }}{% endblock %}
+		{% do action( 'maera/main/after', post.ID ) %}
+	</div>
+	{% do action( 'maera/content/after' ) %}
+	{% do action( 'maera/wrap/after' ) %}
+</main>
