--- a/views/content-entry-header.twig
+++ b/views/content-entry-header.twig
@@ -1,7 +1,7 @@
 {% from 'container_open.html.twig' import container_open as container_open %}
 {% from 'container_close.html.twig' import container_close as container_close %}
 
-<header class="entry-header">
+<div class="entry-header">
 	{% if post.thumbnail %}
 		<div class="parallax-container featured-image">
 			<a class="parallax featured-image" href="{{ post.link }}" title="{{ post.title }}">
@@ -17,4 +17,4 @@
 			{% include 'content-single-entry-meta.twig' %}
 		{% endif %}
 	{{ container_close }}
-</header>
+</div>
