--- a/views/content-entry-content.twig
+++ b/views/content-entry-content.twig
@@ -1,9 +1,6 @@
 {#<?php#}
-{% from 'container_open.html.twig' import container_open as container_open %}
-{% from 'container_close.html.twig' import container_close as container_close %}
-{% from 'row_open.html.twig' import row_open as row_open %}
-{% from 'row_close.html.twig' import row_close as row_close %}
+{% import 'grid_classes.html.twig' as grid %}
 
-{{ container_open( 'div', '', 'entry-content', 'itemprop="description"' ) }}
+<div class="{{ grid.container() }} entry-content" itemprop="description">
 	{{ post.content }}
-{{ container_close }}
+</div>
