--- a/views/base.twig
+++ b/views/base.twig
@@ -1,11 +1,24 @@
+{% import 'grid_classes.html.twig' as grid %}
 <main>
 	{% do action( 'maera/wrap/before', post.ID ) %}
-	{% do action( 'maera/content/before', post.ID ) %}
-	<div class="content" id="content" itemprop="mainContentOfPage">
-		{% do action( 'maera/main/before', post.ID ) %}
-		{% block main %}{{ __( 'Sorry, no content', 'maera' ) }}{% endblock %}
-		{% do action( 'maera/main/after', post.ID ) %}
-	</div>
-	{% do action( 'maera/content/after' ) %}
+	{% if sidebar.primary %}
+		<div class="{{ grid.row() }}">
+			<div class="col s{{ 12 - theme_mods.sidebar_width }} main-content-wrapper">
+				{% endif %}
+				{% do action( 'maera/content/before', post.ID ) %}
+				<div class="content" id="content" itemprop="mainContentOfPage">
+					{% do action( 'maera/main/before', post.ID ) %}
+					{% block main %}{{ __( 'Sorry, no content', 'maera' ) }}{% endblock %}
+					{% do action( 'maera/main/after', post.ID ) %}
+				</div>
+				{% do action( 'maera/content/after' ) %}
+				{% if sidebar.primary %}
+			</div>
+			fff
+			<div class="col s{{ theme_mods.sidebar_width }}">
+				{{ sidebar.primary }}
+			</div>
+		</div>
+		{% endif %}
 	{% do action( 'maera/wrap/after' ) %}
 </main>
