--- a/views/content-single-entry-header.twig
+++ b/views/content-single-entry-header.twig
@@ -1,5 +1,19 @@
 {% import 'grid_classes.html.twig' as grid %}
-<div class="{{ grid.container() }} entry-header">
-	<title itemprop="name">{{ post.title }}</title>
-	<h1 class="entry-title">{{ post.title|apply_filters( 'maera/title' ) }}</h1>
+
+<div class="entry-header">
+	{% if post.thumbnail %}
+	<div class="parallax-container featured-image">
+		<a class="parallax featured-image" href="{{ post.link }}" title="{{ post.title }}">
+			<img class="featured-image" src="{{ post.thumbnail.src|resize(thumbnail.width, thumbnail.height) }}" srcset="{{ post.thumbnail.src|resize(thumbnail.width, thumbnail.height)|retina(1) }} 1x, {{ post.thumbnail.src|resize(thumbnail.width, thumbnail.height)|retina(2) }}  2x">
+		</a>
+	</div>
+	{% endif %}
+	<div class="{{ grid.container() }} entry-content" itemprop="description">
+		{% do action( 'maera/teaser/start', post.ID ) %}
+		<title itemprop="name">{{ post.title }}</title>
+		<h2 class="entry-title"><a href="{{ post.link }}">{{ post.title|apply_filters( 'maera/title' ) }}</a></h2>
+		{% if post.post_type == 'post' %}
+		{% include 'content-single-entry-meta.twig' %}
+		{% endif %}
+	</div>
 </div>
