--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -25,12 +25,10 @@ nav {
     -webkit-font-smoothing: antialiased;
   }
   ul li:hover, ul li.active {
-    background-color: color("materialize-red", "lighten-1");
   }
 }
 
 .header {
-  color: color("materialize-red", "lighten-2");
   font-weight: 300;
 }
 
@@ -113,4 +111,51 @@ img, figure {
     width: 100%;
     margin: 0;
     padding: 0;
+}
+
+body {
+    &.links-red a { color: color("red", "base"); }
+    &.links-pink a { color: color("pink", "base"); }
+    &.links-purple a { color: color("purple", "base"); }
+    &.links-deep-purple a { color: color("deep-purple", "base"); }
+    &.links-indigo a { color: color("indigo", "base"); }
+    &.links-blue a { color: color("blue", "base"); }
+    &.links-light-blue a { color: color("light-blue", "base"); }
+    &.links-cyan a { color: color("cyan", "base"); }
+    &.links-teal a { color: color("teal", "base"); }
+    &.links-green a { color: color("green", "base"); }
+    &.links-light-green a { color: color("light-green", "base"); }
+    &.links-lime a { color: color("lime", "base"); }
+    &.links-yellow a { color: color("yellow", "base"); }
+    &.links-amber a { color: color("amber", "base"); }
+    &.links-orange a { color: color("orange", "base"); }
+    &.links-deep-orange a { color: color("deep-orange", "base"); }
+    &.links-brown a { color: color("brown", "base"); }
+    &.links-grey a { color: color("grey", "base"); }
+    &.links-blue-grey a { color: color("blue-grey", "base"); }
+
+    &.links-red,
+    &.links-pink,
+    &.links-purple,
+    &.links-deep-purple,
+    &.links-indigo,
+    &.links-blue,
+    &.links-light-blue,
+    &.links-cyan,
+    &.links-teal,
+    &.links-green,
+    &.links-light-green,
+    &.links-lime,
+    &.links-yellow,
+    &.links-amber,
+    &.links-orange,
+    &.links-deep-orange,
+    &.links-brown,
+    &.links-grey,
+    &.links-blue-grey {
+        nav a, footer {
+            color: #fff;
+        }
+    }
+
 }
