--- a/views/content-entry-content.twig
+++ b/views/content-entry-content.twig
@@ -2,5 +2,5 @@
 {% import 'grid_classes.html.twig' as grid %}
 
 <div class="{{ grid.container() }} entry-content" itemprop="description">
-	{{ post.content }}
+	{{ post.get_preview }}
 </div>
